fixed issue with logo scaling on sidebar open. fixed flashing svg icon issue on sidebar open. fixed sidebar link new line showing on sidebar open by adding container with no overflow around the text element

--- a/src/components/Sidebar/Logo/Logo.module.scss
+++ b/src/components/Sidebar/Logo/Logo.module.scss
@@ -3,10 +3,9 @@
   text-align: center;
   .sidebar_logo__wide {
     width: 200px;
-    max-width: 100%;
   }
   .sidebar_logo__slim {
-    width: 30px;
+    width: 40px;
   }
 }
 
