--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -1,5 +1,5 @@
 .sidebar {
-  transition: 0.2s ease;
+  transition: 0.2s cubic-bezier(0.76, 0, 0.24, 1);
   width: 100%;
   background-color: #00b4ff;
   height: 100%;
@@ -25,6 +25,7 @@
   .sidebar {
     width: 250px;
     transform: translate(0);
+    overflow: hidden;
 
     .toggle_menu {
       display: flex;
@@ -33,7 +34,7 @@
       cursor: pointer;
 
       svg {
-        transition: 0.3s ease;
+        transition: 0.2s ease;
         fill: white;
       }
     }
